update pom.xml, sound path predicate, list of predicates fifo, copy constructors for predicates, method worklist